# kwin

./: CMakeLists.txt
autotests/integration/: fractional_scaling_test.cpp  kwin_wayland_test.cpp  kwin_wayland_test.h  move_resize_window_test.cpp  outputchanges_test.cpp  transient_placement.cpp
po/zh_CN/: kwin.po
src/: CMakeLists.txt  activation.cpp  activities.cpp  appmenu.h  atoms.h  client_machine.cpp  client_machine.h  composite.cpp  composite.h  compositor.cpp  compositor.h  compositor_wayland.cpp  cursor.cpp  debug_console.cpp  group.cpp  input.cpp  killprompt.cpp  kwin.kcfg  layers.cpp  layershellv1window.cpp  layershellv1window.h  main.cpp  main.h  main_wayland.cpp  netinfo.h  options.cpp  outputconfigurationstore.cpp  placement.cpp  pointer_input.cpp  rootinfo_filter.h  screenedge.cpp  sm.cpp  sm.h  useractions.cpp  wayland_server.cpp  wayland_server.h  window.cpp  window.h  workspace.cpp  workspace.h  (+4 more)
src/core/: colorspace.cpp  colorspace.h  iccprofile.cpp  output.cpp  output.h  outputbackend.cpp  outputbackend.h  renderbackend.cpp  renderbackend.h  renderloop.cpp
src/decorations/: decoratedclient.cpp
src/effect/: effecthandler.cpp  effecthandler.h  effectwindow.cpp  effectwindow.h  xcb.h
src/helpers/: CMakeLists.txt
src/libkwineffects/: glshadermanager.cpp  glshadermanager.h  kwinglobals.h
src/plugins/: CMakeLists.txt
src/plugins/bincompatmarker/: CMakeLists.txt  elfparser.cpp  elfparser.h  main.cpp  markerinterface.cpp  markerinterface.h  metadata.json
src/scene/: imageitem.cpp  imageitem.h  item.cpp  item.h  itemrenderer_opengl.cpp  (+11 more)
(+72 files in other folders)
